infrastructure/configs/base/cilium/https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: https-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-raymond
      protocol: HTTPS
      port: 443
      hostname: "*.raymondcollazo.com"
      tls:
        certificateRefs:
          - kind:
            name:
